# iron_static_server

./: Cargo.toml  README.md
examples/: cert.pem  key.pem  server.md  server.rs  server.toml
examples/website1/: index.html
examples/website2/: index.html
src/: config.rs  ierror.rs  lib.rs  main.rs
