[package]
name = "iron_static_server"
version = "0.1.2"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "Serve static websites using vhosts and ssl"
documentation = "https://docs.rs/crate/iron_static_server"
homepage = "https://github.com/andete/iron_static_server"
repository = "https://github.com/andete/iron_static_server"

[dependencies]
iron = { version = "0.4", features = ["ssl"] }
router = "0.4"
staticfile = "0.3"
iron_vhosts = "0.4"
mount = "0.2"
toml = { version = "0.2", features = ["serde"], default-features = false }
serde = "0.8"
serde_derive = "0.8"
error-chain = "0.7"
env_logger = "0.3"
log = "0.3"
syslog = "3.2"
daemonize = "0.2"
argparse = "0.2"

[replace]
"hyper:0.9.14" = { git = 'https://github.com/SergioBenitez/hyper.git', branch = '0.9.x' }
