[package]
name = "iron_static_server"
version = "0.1.2"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "Serve static websites using vhosts and ssl"
documentation = "https://docs.rs/crate/iron_static_server"
homepage = "https://github.com/andete/iron_static_server"
repository = "https://github.com/andete/iron_static_server"

[dependencies]
iron = "0.5"
router = "0.5"
staticfile = "0.3"
iron_vhosts = "0.5"
mount = "0.3"
toml = { version = "0.2", features = ["serde"], default-features = false }
serde = "0.8"
serde_derive = "0.8"
error-chain = "0.7"
env_logger = "0.3"
log = "0.3"
syslog = "3.2"
daemonize = "0.2"
url = "1.2.4"
hyper-native-tls = "0.2"
clap = "2.20"


[replace]
"staticfile:0.3.1" = { git = 'https://github.com/andete/staticfile.git', branch = 'iron_0.5_compat' }
